--- a/app/index.pug
+++ b/app/index.pug
@@ -15,5 +15,6 @@ html(lange="en")
       include app
 
     #Scripts
+      script( src="scripts/ga.js" )
       script( src="scripts/lib/jquery.min.js" )
       script( src="scripts/app.js", type"text/javascript")
