--- a/styles/main.css
+++ b/styles/main.css
@@ -629,6 +629,10 @@ body {
   width: 100%;
   height: 100%;
 }
+.app * {
+  display: flex;
+  flex-direction: column;
+}
 .hp {
   padding-left: 32px;
   padding-right: 32px;
@@ -801,6 +805,8 @@ header .image {
 }
 footer {
   background: #1B1B1B;
+  justify-content: center;
+  display: flex;
 }
 footer ul {
   margin: 0;
@@ -843,7 +849,6 @@ a {
   }
   footer ul {
     flex-direction: row;
-    justify-content: center;
     display: flex;
   }
   .app {
