--- a/app/index.pug
+++ b/app/index.pug
@@ -11,10 +11,14 @@ html(lange="en")
     link( rel="stylesheet", media="screen", href="styles/main.css")
 
   body.home
-    #App
+    #App.app
       include app
 
-    #Scripts
-      script( src="scripts/ga.js" )
-      script( src="scripts/lib/jquery.min.js" )
-      script( src="scripts/app.js", type"text/javascript")
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-80012537-2', 'auto');
+      ga('send', 'pageview');
