--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,6 +4,7 @@
 //.sf{ font-family:'San Francisco'}
 
 html, body{ width:100%; height:100%; }
+.app * { display:flex; flex-direction:column; }
 
 // Vars
 @maxWidth:800px;
@@ -36,7 +37,7 @@ header{ width:100%; .bkg; .jcc;
  }
 
 
-.footer-cta{ padding:32px; .bkg; .hp; .flxCol; .jcc; .aic; .tac; }
+.footer-cta{ width:100%; padding:32px; .bkg; .hp; .flxCol; .jcc; .aic; .tac; }
 
 
 // Components
@@ -55,7 +56,7 @@ header{ width:100%; .bkg; .jcc;
 
 .button{ padding:16px 24px; background:fade(black,90%); .br(32px); color:white; font-weight:bold; }
 
-footer{ background:#1B1B1B;
+footer{ width:100%; background:#1B1B1B;  .jcc;
 	ul{ margin:0; padding:20px 0; .hp; }
 		li{ list-style:none; .tac;}
 			a{ display:block; padding:20px; color:darken(white,50%); font-weight:500; }
@@ -77,7 +78,7 @@ and (min-width : 620px) {
 	}
 
 	footer{
-		ul{ .flxRow; .jcc; }
+		ul{ .flxRow; }
 	}
 
 	.app{ flex:1; }
