--- a/app/meta.pug
+++ b/app/meta.pug
@@ -1,5 +1,5 @@
-- var title = Mikey App - Your Personal Surfing Coach
-- var siteName = Mikey App
+- var title = "Mikey App - Your Personal Surfing Coach"
+- var siteName = "Mikey App"
 - var description = "Meet, your personal surfing coach. Learn how to surf with the best advice every step of the way"
 
 //Tech Meta
@@ -27,3 +27,6 @@ script(type="application/ld+json").
 	  "@type": "Organization",
 	  "url": "http://www.mikeyapp.com"
 	}
+
+link( rel="shortcut icon", href="/favicon.ico", type="image/x-icon" )
+link( rel="icon", href="/favicon.ico", type="image/x-icon" )
