--- a/app/index.pug
+++ b/app/index.pug
@@ -1,24 +1,13 @@
 doctype html
 html(lange="en")
 
-  head
-    include meta
+	head
+		include meta
+		link( rel="stylesheet", media="screen", href="styles/styles.css")
 
-    //Favicon
-    link( rel="shortcut icon", href="/favicon.ico")
-    link( rel="apple-touch-icon", href="/apple-touch-icon.png")
+	body.home
+		#App.app
+			include views/app
 
-    link( rel="stylesheet", media="screen", href="styles/main.css")
-
-  body.home
-    #App.app
-      include app
-
-    script.
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-80012537-2', 'auto');
-      ga('send', 'pageview');
+		#Scripts
+			include scripts
