--- a/app/views/app.pug
+++ b/app/views/app.pug
@@ -1,40 +1,41 @@
+- var vpImageWidth = 300
 header( style="background-image:url('./images/bkg.jpg')")
 	.header-inner
-		.app
+		.hero
 			.logo
-			.app-name Mikey,
+			.app-name Mikey
 			.subtitle Your Personal <br/> Surfing Coach
 
-			.button.cta Get it Now
+			.button#CTA1 Get it Now
 
-		.image( style="background-image:url('./images/app.png')")
+		image.img( width='300' height='auto' src='./images/app.png')
 
 .value-prop
 	.block
 		.inner
-			.title Personalized Coaching
+			h2.title Personalized <br/> Coaching
 			.description Learn how to surf with professional coaching at every step of the way
-		.image( style="background-image:url('./images/vp1.jpg')")
+		image.img( width=vpImageWidth height='auto' src='./images/vp1.jpg')
 
 	.block
 		.inner
-			.title Personalized Coaching
+			h2.title Learn from <br/>the best
 			.description Learn how to surf with professional coaching at every step of the way
-		.image( style="background-image:url('./images/vp1.jpg')")
+		image.img( width=vpImageWidth height='auto' src='./images/vp2.jpg')
 
 	.block
 		.inner
-			.title Personalized Coaching
+			h2.title Ask Anything, <br/>Anytime
 			.description Learn how to surf with professional coaching at every step of the way
-		.image( style="background-image:url('./images/vp1.jpg')")
+		image.img( width=vpImageWidth height='auto' src='./images/vp3.jpg')
 
 .footer-cta( style="background-image:url('./images/bkg.jpg')")
-	.app
+	.hero
 		.logo
-		.app-name Mikey,
+		.app-name Mikey
 		.subtitle Your Personal <br/> Surfing Coach
 
-		.button.cta Get it Now
+		.button#CTA2 Get it Now
 
 footer
 	ul
