--- a/app/views/app.pug
+++ b/app/views/app.pug
@@ -1,4 +1,11 @@
 - var vpImageWidth = 300
+.modal#Modal
+	.bkg#ModalBKG
+	.inner
+		span The app is about to be released, write down your email and we'll check in with you as soon as we have it!
+		input( type='email' placeholder='you@email.com')
+		.button#SubmitEmail Keep me udpated
+
 header( style="background-image:url('./images/bkg.jpg')")
 	.header-inner
 		.hero
