--- a/app/styles/global-styles.less
+++ b/app/styles/global-styles.less
@@ -112,7 +112,13 @@
 	/*****************
 	Flexbox helpers
 	******************/
-	.flex{ display:flex; }
+	.flex{
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+   }
 	.row{ .flex; flex-direction:row; }
 	.column{ .flex; flex-direction:column; }
 	.wrap{ flex-wrap:wrap; }
@@ -122,7 +128,14 @@
 	.self-center{ align-self:center;}
 	.self-start{ align-self:flex-start;}
 	.self-end{ align-self:flex-end;}
-	.flex1{ .flex; flex:1; }
+	.flex1{ .flex;
+      -webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
+      -moz-box-flex: 1;         /* OLD - Firefox 19- */
+      width: 20%;               /* For old syntax, otherwise collapses. */
+      -webkit-flex: 1;          /* Chrome */
+      -ms-flex: 1;              /* IE 10 */
+      flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  }
 
 
 	//FX ===================================================================
