--- a/app/scripts.pug
+++ b/app/scripts.pug
@@ -1,30 +1,7 @@
 
 script( src="scripts/lib/jquery.min.js" )
 
-script.
-	$(document).ready( function() {
-			$('#CTA1').on('click', onClickCTA1 )
-			$('#CTA2').on('click', onClickCTA2 )
-
-			$('#ModalBKG').on('click', closeModal )
-	})
-
-	function onClickCTA1(){
-		ga('send', 'event', 'actions', 'cta1')
-		openModal()
-	}
-	function onClickCTA2(){
-		ga('send', 'event', 'actions', 'cta2')
-		openModal()
-	}
-
-	function openModal(){
-		$('#Modal').css('visibility', 'visible')
-	}
-
-	function closeModal(){
-		$('#Modal').css('visibility', 'hidden')
-	}
+script( src="scripts/app.js")
 
 script.
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
