--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -6,6 +6,7 @@
 
 html, body{ width:100%; height:100%; }
 .app * { display:flex; flex-direction:column; }
+script{ display:none !important; }
 
 // Vars ------------
 @maxWidth:800px;
@@ -73,8 +74,15 @@ a{ text-decoration:none; }
 	.bkg{ .fixed; width:100%; height:100%; background: fade(white,80%); }
 	.inner{ width:280px; .rel; padding:20px; background:white; .br(8px); .bs(0 5px 20px 0 fade(black,20%) ); }
 		span{ .t2; .tac; }
-		input{ .t2; .tac; margin: 12px 0 8px; padding:8px 12px;}
+		.email{ .t2; .tac; margin: 12px 0 8px; padding:8px 12px; border:1px solid fade(black, 20%); .br(6px); }
+		.button{ border:0; }
+		.response{ margin-top:12px;
+			&#mce-success-response{ color: green; }
+		}
+
 }
+
+.close:after{ width:20px; height:20px; background:white; .asfe; .fs(16px); color:black; content:'x'; font-weight:bold; .br(50%); }
 
 // Media queries ------------
 
