--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1007,6 +1007,35 @@ a {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
 }
+.legalText {
+  max-width: 700px;
+  margin: 0 auto;
+}
+.legalText * {
+  display: inline-block;
+}
+.legalText p,
+.legalText li,
+.legalText em,
+.legalText a {
+  font-size: 22px;
+  line-height: 36px;
+}
+.legalText ul {
+  list-style: dot;
+}
+.legalText li {
+  display: list-item;
+}
+.legalText em {
+  font-weight: bold;
+  font-style: normal;
+}
+.legalText h3 {
+  font-size: 32px;
+  line-height: 42px;
+  margin: 24px 0 8px;
+}
 @media only screen and (min-width: 640px) {
   header .header-inner {
     -webkit-flex-direction: row;
