Add TOS and Privacy pages

--- a/app/views/app.pug
+++ b/app/views/app.pug
@@ -27,13 +27,13 @@ header( style="background-image:url('./images/bkg.jpg')")
 	.block
 		.inner
 			h2.title Learn from <br/>the best
-			.description Learn how to surf with professional coaching at every step of the way
+			.description Everytime we chat we learn how to tailor your surfing roadmap so it exactly matches your level and your situation
 		image.img( width=vpImageWidth height='auto' src='./images/vp2.jpg')
 
 	.block
 		.inner
 			h2.title Ask Anything, <br/>Anytime
-			.description Learn how to surf with professional coaching at every step of the way
+			.description Your coach will answer any doubt you have about anything related to your surfing
 		image.img( width=vpImageWidth height='auto' src='./images/vp3.jpg')
 
 .footer-cta( style="background-image:url('./images/bkg.jpg')")
@@ -44,11 +44,4 @@ header( style="background-image:url('./images/bkg.jpg')")
 
 		.button#CTA2 Get it Now
 
-footer
-	ul
-		li
-			a(href="mailto:mikey@surfcoachmike.com") Contact Us
-		li
-			a(href="#") Privacy
-		li
-			a(href="#") Terms of Service
+include footer
