--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -84,6 +84,18 @@ a{ text-decoration:none; }
 
 .close:after{ width:20px; height:20px; background:white; .asfe; .fs(16px); color:black; content:'x'; font-weight:bold; .br(50%); }
 
+
+.legalText{ max-width:700px; margin:0 auto;
+	& * { display: inline-block; }
+	p, li, em, a{ font-size:22px; line-height:36px;}
+
+	ul{ list-style: dot;}
+	li{ display: list-item; }
+
+	em{ font-weight:bold; font-style:normal;}
+	h3{ font-size:32px; line-height:42px; margin:24px 0 8px}
+}
+
 // Media queries ------------
 
 @media only screen
